--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pebble-watchface",
-  "author": "MakeAwesomeHappen",
+  "author": "Yang",
   "version": "1.0.0",
   "keywords": ["pebble-app"],
   "private": true,
@@ -10,7 +10,7 @@
       "rockyjs": "src/rocky/index.js",
       "pkjs": "src/pkjs/index.js"
     },
-    "displayName": "pebble-watchface",
+    "displayName": "自用表盘",
     "uuid": "864b6a27-5b77-48e1-9a8f-372112bc8dbd",
     "projectType": "rocky",
     "sdkVersion": "3",
